[gd_scene load_steps=12 format=3 uid="uid://cdfxr6ka7p4um"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_4lkak"]
[ext_resource type="Script" path="res://manualposemaker/pickablegeon.gd" id="2_f3pjp"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_oqlxq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6uomk"]
resource_local_to_scene = true

[sub_resource type="CylinderMesh" id="CylinderMesh_47lgu"]
resource_local_to_scene = true
top_radius = 0.07
bottom_radius = 0.1
height = 0.5
radial_segments = 12

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8dvlb"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 0.0784314, 0.486275)

[sub_resource type="ArrayMesh" id="ArrayMesh_cuxrr"]

[sub_resource type="BoxMesh" id="BoxMesh_t7ep3"]
size = Vector3(0.015, 0.007, 0.007)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_khbsa"]
no_depth_test = true
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_s2nn2"]
size = Vector3(0.007, 0.007, 0.015)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gqhcn"]
no_depth_test = true
albedo_color = Color(0.803828, 0.186501, 1, 1)

[node name="GeonObject" instance=ExtResource("1_4lkak")]
collision_layer = 1048584
collision_mask = 196608
freeze = true
script = ExtResource("2_f3pjp")
ranged_grab_method = 0

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("ConvexPolygonShape3D_oqlxq")

[node name="CSGScaler" type="CSGCombiner3D" parent="." index="1"]
material_override = SubResource("StandardMaterial3D_6uomk")

[node name="CSGRod" type="CSGMesh3D" parent="CSGScaler" index="0"]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_47lgu")

[node name="CSGSphereTop" type="CSGSphere3D" parent="CSGScaler/CSGRod" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
radius = 0.07

[node name="CSGSphereBottom" type="CSGSphere3D" parent="CSGScaler/CSGRod" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
radius = 0.1

[node name="CSGHalfBox" type="CSGBox3D" parent="CSGScaler/CSGRod" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
operation = 2

[node name="MeshOutline" type="MeshInstance3D" parent="." index="2"]
visible = false
material_override = SubResource("StandardMaterial3D_8dvlb")
cast_shadow = 0
mesh = SubResource("ArrayMesh_cuxrr")

[node name="JointTopMarker" type="MeshInstance3D" parent="." index="3"]
visible = false
mesh = SubResource("BoxMesh_t7ep3")
surface_material_override/0 = SubResource("StandardMaterial3D_khbsa")

[node name="JointBottomMarker" type="MeshInstance3D" parent="." index="4"]
visible = false
mesh = SubResource("BoxMesh_s2nn2")
surface_material_override/0 = SubResource("StandardMaterial3D_gqhcn")
